<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"> 
	
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		
			<TextView
		        android:id="@+id/request_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="24sp"
		        android:padding="10sp"
		        android:textStyle="bold"
		        android:layout_gravity="center" 
		        android:text="@string/submit_a_request"
		        android:textColor="#7CD77A"   
			    />    
	
			<TextView
		        android:id="@+id/item_info"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:padding="10sp"
		        android:textStyle="bold"
		        android:layout_gravity="center" 
		        android:text="@string/item_info"
		        android:textColor="#7CD77A"   
			    />
			
			<EditText
		        android:id="@+id/request_item"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:inputType="text"
		        android:hint="@string/item" >
		    </EditText>
		    
		    <EditText
		        android:id="@+id/request_payment"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:inputType="numberDecimal"
		        android:hint="@string/payment"
		        />

			<Spinner
			    android:id="@+id/minutes_spinner"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:entries="@array/minutes_array"
			    android:prompt="@string/select"    
			    /> 
		    
		    <EditText
		        android:id="@+id/request_cost"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		  		android:inputType="numberDecimal"
				android:hint="@string/item_cost"
		        />
	
		   	<EditText
		        android:id="@+id/extra_info"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:inputType="text"
		        android:hint="@string/extra_info"
		        />   	    
		    
			<TextView
		        android:id="@+id/address_info"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:paddingLeft="10sp"
		        android:paddingTop="50sp"
		        android:paddingBottom="10sp"
		        android:textStyle="bold"	        
		        android:layout_gravity="center" 
		        android:text="@string/address" 
		        android:textColor="#7CD77A"  
			    />	
		    
		    <EditText
		        android:id="@+id/address_1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:inputType="text"
		        android:hint="@string/street_address_1"
		        /> 
		    
		    <TextView
		        android:id="@+id/estimate_address"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:padding="10sp"
		        android:textStyle="bold"
		        android:layout_gravity="center" 
		        android:text=""  
			    />
		    
		    
		    
		    <!-- <EditText
		        android:id="@+id/address_2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:inputType="text"
		        android:hint="@string/street_address_2"
		        /> -->
		    
		    <Button
		        android:id="@+id/asker_submit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal|center"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginBottom="20dp"
		        android:text="@string/submit"
		        android:textSize="24sp"       
		        android:background="#7CD77A" 
		        android:textColor="#fff"/> 
		
		    
		
		</LinearLayout>
	</ScrollView>	
	
	<!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>