<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/loginbackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" > 
        
    <EditText 

        android:id="@+id/login_username"

        android:layout_width="fill_parent"

        android:layout_height="wrap_content"

        android:hint="@string/username"

        android:inputType="text"

        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit"
        android:textSize="20sp"       
        android:background="#7CD77A" 
        android:textColor="#fff"/>     
    

	<TextView 

        android:id="@+id/login_failure"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:textSize="20sp"

        android:text=""

        android:layout_gravity="center"

        />

    
    
    </LinearLayout>

</LinearLayout>